src/objects/Medication__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medications</relationshipLabel>
        <relationshipName>Medications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dosage__c</fullName>
        <label>Dosage/Route/Schedule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Name__c</fullName>
        <label>Drug Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Prescribing_Physician__c</fullName>
        <label>Prescribing Physician</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Medication</label>
    <nameField>
        <displayFormat>M-{0}</displayFormat>
        <label>Medication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>